@startuml
' Diagrama de Classes que reflete a estrutura real do código,
' removendo as classes que não foram implementadas.

skinparam linetype ortho

' -----------------------------
' CLASSE CENTRAL
' -----------------------------
class Paciente {
  -id : int
  -nome : String
  -dataNascimento : Date
  -endereco : String
  -telefone : String
  -telefoneEmergencia : String
  -cpf : String
  +listarTodos()
  +buscar(nome, tipo)
  +salvar()
  +atualizar()
  +getId()
  +setId(id)
}

class FichaTecnica {
  -id : int
  -paciente: int
  -historicoMedico: int
  -medicamentos: int
  -restricoesAlimentares: int
  -procedimentosEspecificos: int
  +listarPorCliente(idCliente)
  +salvar()
  +atualizar()
  +getId()
  +setId(id)
}

' -----------------------------
' COMPONENTES DA FICHA TÉCNICA
' -----------------------------
class historicoMedico {
  -id : int
  -id_ficha: int
  -descricao : String
  -id_medico: int
  +listarPorCliente(idCliente)
  +salvar()
  +atualizar()
  +deletar(id_ficha)
}

class tipoHistoricoMedico {
  -id : int
  -descricao : String
}

class Medicamento {
  -id : int
  -id_ficha: int
  -nome : String
  -dosagem : String
  -viaAdministracao : String
  -inicioTratamento : Date
  -fimTratamento : Date
  -ultima_aplicacao: Date
  -repetir: int
  -intervalo: int
  -diasMedicamento: String
  -horasMedicamento: String
  +listarPorCliente(idCliente)
  +salvar()
  +atualizar()
  +deletar(id_ficha)
  +listarParaAgenda(id_ficha, ano, mes)
}

class Procedimento {
  -id : int
  -nome : String
  +consulta()
  +salvar()
}

class ProcedimentoEspecifico {
  -id : int
  -id_ficha: int
  -id_procedimento : String
  -horarios : String
  -descricao : String
  +listarPorCliente(idCliente)
  +salvar()
  +atualizar()
  +deletar(id_ficha)
}

class RestricaoAlimentar {
  -id : int
  -id_ficha: int
  -descricao : String
  +listarPorCliente(idCliente)
  +salvar()
  +atualizar()
  +deletar(id_ficha)
}

class Medicos {
  -id: int
  -nome: String
  -crm: String
  -especialidade: String
  -telefone: String
  +consulta()
  +salvar()
}

' -----------------------------
' CLASSES DE REGISTROS
' -----------------------------
class Documento {
  -id : int
  -tipo : int
  -paciente: int
  -descricao : String
  -arquivo : File
}

class RelatorioDiario {
  -id : int
  -paciente: int
  -data : Date
  -conteudo : String
}

class Agenda {
  -id : int
  -data : Date
  -atividade : String
  -paciente: int
}

' -----------------------------
' RELACIONAMENTOS
' -----------------------------
Paciente "1" -- "1" FichaTecnica
Paciente "1" -- "*" Documento
Paciente "1" -- "*" Agenda
Paciente "1" -- "*" RelatorioDiario

FichaTecnica "1" -- "*" historicoMedico
historicoMedico "*" -- "1" tipoHistoricoMedico
historicoMedico "0..*" -- "1" Medicos : registrado por
FichaTecnica "1" -- "*" Medicamento
FichaTecnica "1" -- "*" RestricaoAlimentar
FichaTecnica "1" -- "*" ProcedimentoEspecifico
ProcedimentoEspecifico "*" -- "1" Procedimento

@enduml